tests/rosetta/out/Fortran/call-a-function-2.error
gfortran: exit status 1
/tmp/call-a-function-2.f90:23:6:

   23 |     f()
      |      1
Error: ‘f’ at (1) is not a variable
/tmp/call-a-function-2.f90:24:6:

   24 |     g(1,2.0)
      |      1
Error: ‘g’ at (1) is not a variable
/tmp/call-a-function-2.f90:26:6:

   26 |     g(res(((0)+1)),res(((1)+1)))
      |      1
Error: ‘g’ at (1) is not a variable
/tmp/call-a-function-2.f90:27:6:

   27 |     g(g(1,2.0),3.0)
      |      1
Error: ‘g’ at (1) is not a variable
/tmp/call-a-function-2.f90:9:14:

    9 |     res = (/0,0.0/)
      |              1
Error: Element in INTEGER(4) array constructor at (1) is REAL(4)
