tests/rosetta/out/Fortran/call-a-function-2.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program call_a_function_2
  implicit none
    integer :: res
  call main()
  
  contains
  recursive integer function f() result(res)
    res = (/0,0.0/)
    return
  end function f
  recursive integer function g(a,b) result(res)
    integer, intent(in) :: a
    real, intent(in) :: b
    res = 0
    return
  end function g
  recursive subroutine h(s,nums)
    character(len=100), intent(in) :: s
    integer, intent(in) :: nums
  end subroutine h
  recursive subroutine main()
    f()
    g(1,2.0)
    res = f()
    g(res(((0)+1)),res(((1)+1)))
    g(g(1,2.0),3.0)
  end subroutine main
end program call_a_function_2
